# base-cmake-project

./: .gitignore  CMakeLists.txt  README.md  install
PROJECT_NAME_CHANGE_ME/: CMakeLists.txt  INSTAL_SERVICE_CHANGE_ME.service
PROJECT_NAME_CHANGE_ME/include/: H_FILES_HERE_CHANGE_ME.h
PROJECT_NAME_CHANGE_ME/run/: main.cpp
PROJECT_NAME_CHANGE_ME/src/: C_FILES_HERE_CHANGE_ME.cpp
cmake_autoversion/: CMakeLists.txt  GetGitRevisionDescription.cmake  gitAutoVersion.cpp.in  gitAutoVersion.h
cmake_rovcommon/: CMakeLists.txt  README.md
cmake_rovcommon/include/: json.hpp  log.h  luthier.h  misc.h  ntpMonitor.h  pipe.h  ppsMonitor.h  pus.h  rovtime.h  timeConductor.h
cmake_rovcommon/src/: ntpMonitor.cpp  ppsMonitor.cpp  pus.cpp  timeConductor.cpp
resources/: TEST_SCRIPTS_CHANGE_ME.rb
